--- a/capputeno/src/app/globals.css
+++ b/capputeno/src/app/globals.css
@@ -2,9 +2,13 @@
   --border-radius: 12px;
   --logo-color: #5D5D6D;
   --bg-secondary: #F3F5F6;
+  --bg-primary: #F0F0F5;
   --text-dark: #737380;
+  --text-dark-2: #41414D,
+  --shapes-dark: #09090A;;
   --delete-color: #DE3838;
   --orange-low: #FFA585;
+  --shapes: #DCE2E6;
 }
 
 
