--- a/capputeno/src/app/globals.css
+++ b/capputeno/src/app/globals.css
@@ -10,6 +10,8 @@
   --orange-low: #FFA585;
   --shapes: #DCE2E6;
   --secondary-text: #617480;
+  --border-color: #A8A8B3;
+  --sucess-color: #51B853;
 }
 
 
@@ -25,3 +27,11 @@ body {
   overflow-x: hidden;
 }
 
+button, a{
+  cursor: pointer;
+  transition: filter 0.2s;
+}
+
+button:hover, a:hover {
+  filter: brightness(0.9);
+}
